syntax = "proto3";

option csharp_namespace = "Auth";

package auth;

service Authenticator {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  enum Status {
    SUCCESS = 0;
    INVALID_DATA = 1;
    EMAIL_CONFLICT = 2;
    INTERNAL_ERROR = 3;
  }
  Status status = 1;
  string message = 2; 
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool isSuccess = 1;
  string loginToken = 2;
  string refreshToken = 3;
  string message = 4;
}
